# gnss-despoof

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
config/: detector.yaml  iq-sample-config.yaml
config/gnss-sdr/: capture_dragoff_globe_to_castle.conf  capture_dragoff_stealthy_kings_garden.conf  clean_castle.conf  clean_globe.conf  clean_kings_garden.conf  drift_control_castle_to_globe.conf  meaconing_globe_walkoff.conf  meaconing_kings_garden_fixed.conf  open_loop_jump_kings_garden.conf  spain.conf
data/ephemeris/: README.md  brdc1810.26n
detector/: CMakeLists.txt  aggregator.cpp  aggregator.hpp  config.cpp  config.hpp  cycle_slip.cpp  cycle_slip.hpp  detection_engine.cpp  detection_engine.hpp  detector.hpp  gnss-sdr-protobuf-wrapper.cpp  gnss-sdr-protobuf-wrapper.hpp  main.cpp  raim.cpp  raim.hpp  receiver_history.cpp  receiver_history.hpp  snapshot.cpp  snapshot.hpp  unit.hpp  ws_server.cpp  ws_server.hpp
detector/proto/: gnss_synchro.proto  monitor_pvt.proto
frontend/: CMakeLists.txt  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: main.ts  style.css  types.ts
frontend/src/data/: feed.ts  history.ts  scenarios.ts  simulation.ts
frontend/src/ui/: eventLogWindow.ts  graphLauncherWindow.ts  graphs.ts  map.ts  onboarding.ts  statusWindow.ts  trackingWindow.ts  windowManager.ts
frontend/src/utils/: canvas.ts
scripts/: CMakeLists.txt  combine_iq.py  generate_iq_samples.py  motion_profiles.py
